Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
N/A
-
None
-
Can result in hang or crash
-
Q3/2026 Server Maintenance
Description
bb-13.1-32762-fixed-hf
SELECT XMLISVALID('<root/>','<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="root" type="t"/><xs:complexType name="t"><xs:simpleContent/></xs:complexType></xs:schema>') AS r; |
Version: '13.1.0-MariaDB-asan-debug-log'
|
260713 15:05:38 [ERROR] /13/sql/mariadbd got signal 11 ;
|
|
|
Server version: 13.1.0-MariaDB-asan-debug-log source revision: a4757c42741d75bc50f32ac3131815e545fd4435
|
|
|
libc_sigaction.c:0(__restore_rt)[0x79dcbc845330]
|
type_xmltype/item_func_xml_isvalid.cc:1597(XMLSchema_simpleContent::validate_prepare())[0x5a919bf3ec77]
|
type_xmltype/item_func_xml_isvalid.cc:1327(XMLSchema_user_type::validate_prepare())[0x5a919bf58267]
|
type_xmltype/item_func_xml_isvalid.cc:3295(XMLSchema_attribute::validate_prepare())[0x5a919ad0709d]
|
type_xmltype/item_func_xml_isvalid.cc:3498(validation_enter)[0x5a919b428730]
|
strings/xml.c:381(my_xml_enter)[0x5a919b60541a]
|
strings/xml.c:513(my_xml_parse)[0x5a919b61423a]
|
type_xmltype/item_func_xml_isvalid.cc:3550(validate_schema(String const*, MY_XML_VALIDATION_DATA*))[0x5a919b954a3e]
|
sql/sql_type.cc:7699(Type_handler::Item_send_long(Item*, Protocol*, st_value*) const)[0x5a919b955e94]
|
sql/sql_type.h:6034(Type_handler_long::Item_send(Item*, Protocol*, st_value*) const)[0x5a919b951817]
|
sql/sql_class.cc:3411(select_send::send_data(List<Item>&))[0x5a919b952023]
|
sql/sql_parse.cc:6217(execute_sqlcom_select(THD*, TABLE_LIST*))[0x5a919b7864ea]
|
sql/sql_parse.cc:3991(mysql_execute_command(THD*, bool))[0x5a919b7a5210]
|
sql/sql_parse.cc:7945(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x5a919b7b28d4]
|
sql/sql_parse.cc:1903(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x5a919b7b6684]
|
sql/sql_parse.cc:1437(do_command(THD*, bool))[0x5a919b7bb41e]
|
sql/sql_connect.cc:1503(do_handle_one_connection(CONNECT*, bool))[0x5a919bc9f1be]
|
sql/sql_connect.cc:1415(handle_one_connection)[0x5a919bc9f6a3]
|
perfschema/pfs.cc:2201(pfs_spawn_thread)[0x5a919c2a49c4]
|
asan/asan_interceptors.cpp:234(asan_thread_start(void*))[0x79dcbd85ea42]
|
nptl/pthread_create.c:447(start_thread)[0x79dcbc89caa4]
|
x86_64/clone3.S:80(clone3)[0x79dcbc929c6c]
|
|
|
Connection ID (thread ID): 4
|
Status: NOT_KILLED
|
Query (0x52d000104448): SELECT XMLISVALID('<root/>','<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:element name="root" type="t"/><xs:complexType name="t"><xs:simpleContent/></xs:complexType></xs:schema>') AS r
|
Attachments
Issue Links
- is caused by
-
MDEV-37262 XMLISVALID() schema validation function
-
- In Testing
-